# Kairo

./: .gitignore  README.md  pyproject.toml  requirements.txt
cli_agent/: __main__.py
cli_agent/cli/: main.py
cli_agent/commands/: __init__.py  ask.py  base.py  explain.py  generate.py
cli_agent/core/: agent.py  gemini_client.py
cli_agent/utils/: config.py
